--- a/chat/style.css
+++ b/chat/style.css
@@ -1,7 +1,7 @@
 body{
-    background-image: url(https://images.unsplash.com/photo-1485814837398-ed2048f57499?auto=format&fit=crop&w=750&q=80);
-    background-position: center;
-    background-size: cover;
+    /* background-image: url(https://images.unsplash.com/photo-1485814837398-ed2048f57499?auto=format&fit=crop&w=750&q=80); */
+    /* background-position: center;
+    background-size: cover; */
   }
   html{
     height: 100%;
@@ -12,7 +12,7 @@ body{
   .content{
     text-align: center;
     padding: 15%;
-   color: white;
+   /*color: white;*/
      text-shadow: -3px 13px 10px rgba(0,0,0,0.8)
   }
 #msgbox{
